cluster/aus/infra/traefik-external/pth-frigate-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: pth-frigate
  namespace: default
spec:
  externalName: 192.168.0.21
  ports:
  - name: https
    port: 8971
    targetPort: 8971
  type: ExternalName
