cluster/aus/infra/traefik-external/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute
  namespace: default 
  annotations: 
    kubernetes.io/ingress.class: traefik-ext
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`tshikepe.aksine-am.com`)
      services:
        - name: pth-frigate
          port: 8971

  # tls:
  #   passthrough: true
